Feature checkbox for confirmed message

--- a/admin/css/admin_form_style.css
+++ b/admin/css/admin_form_style.css
@@ -1,7 +1,15 @@
 .style-main-wrapper {
-    background-color: black;
+    min-width: 250px;
+    max-width: 400px;
 }
 
-.test {
-    color: red;
+.options-card-style {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-style {
+    border-radius: 20px;
+    opacity: 0.90;
 }
